--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port= 8888
-spring.application.name=config-server
+spring.application.name=CONFIG-SERVER
 spring.cloud.config.server.git.uri=https://github.com/catluynh-organization/cloud-config-server-sinhvien-khoa-
 spring.cloud.config.server.git.default-label= master
 spring.cloud.config.server.bootstrap=false
+spring.cloud.config.server.clone-on-start=true
